@@ -48,6 +48,14 @@
     "type": "NV"
   },
   {
+    "date": "2025-06-19",
+    "description": "Juneteenth – Día de la Emancipación",
+    "locale": "es-US",
+    "notes": "",
+    "region": "",
+    "type": "NF"
+  },
+  {
     "date": "2025-07-04",
     "description": "Día de la Independiencia",
     "locale": "es-US",
