@@ -1,3 +1,6 @@
+- #115 US: Implement federal holidays
+       (thanks to J. David Stark)
+
 2024.11.0
 -      hu-HU: Add non-working days for 2025 in Hungary
 
